deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: youtube-clone-app
  namespace: youtube-clone  # Replace with your desired namespace
  labels:
    app: youtube-clone
spec:
  replicas: 3
  selector:
    matchLabels:
      app: youtube-clone
  template:
    metadata:
      labels:
        app: youtube-clone
    spec:
      containers:
      - name: youtube-clone-app
        image: twilight17/youtube_clone:5
        ports:
        - containerPort: 3000
