service.yaml
apiVersion: v1
kind: Service
metadata:
  name: youtube-clone
spec:
  selector:
    app: youtube-clone
  ports:
    - protocol: TCP
      port: 80       # External port
      targetPort: 3000 # Container port
  type: LoadBalancer  # Expose the service publicly
