ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: youtube-clone-ingress
  namespace: youtube-clone
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing  # For AWS ALB
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: youtube-clone  # your Service name
            port:
              number: 80                 #  Service's port
